<resources>
    <string name="app_name">Vivikey</string>
    <string name="no_content">Sem dados</string>
    <string name="no_internet">Sem internet</string>
    <string name="facebook_app_id">1388643377951400</string>
    <string name="fb_login_protocol_scheme">fb1388643377951400</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">bae985e09e06ebae784d542c6e1a0a53</string>
    <string name="email_hint">Correo Electronico</string>
    <string name="name_hint">Nombre o Apodo</string>
    <string name="description">Descripcón</string>
    <string name="start">Empezar</string>
    <string name="state">Mensaje de estado</string>
    <string name="info">Podras ver comentarios y confesiones de tus amigos de forma anonima y hablar con ellos de esta forma</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
